@@ -51,20 +51,6 @@ public class PathTest {
     }
 
     @Test
-    public void testTime() {
-        FlagEncoder tmpEnc = new Bike2WeightFlagEncoder();
-        GraphHopperStorage g = new GraphBuilder(new EncodingManager(tmpEnc)).create();
-        Path p = new Path(g, new FastestWeighting(tmpEnc));
-        long flags = tmpEnc.setSpeed(tmpEnc.setReverseSpeed(tmpEnc.setAccess(0, true, true), 10), 15);
-        EdgeIteratorState edge = GHUtility.createMockedEdgeIteratorState(100000, flags);
-                
-        assertEquals(375 * 60 * 1000, p.calcMillis(edge, false));
-        assertEquals(600 * 60 * 1000, p.calcMillis(edge, true));
-
-        g.close();
-    }
-
-    @Test
     public void testWayList() {
         GraphHopperStorage g = new GraphBuilder(carManager).create();
         NodeAccess na = g.getNodeAccess();
